--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     }
 
     .footer a {
-      color: #00C853;
+      color: black; /* Черный цвет текста на кнопках */
       text-decoration: none;
       font-size: 18px;
       margin: 0 10px;
