--- a/index.html
+++ b/index.html
@@ -1,202 +1,151 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Мини-приложение</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Инвестиции</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #0d0d0d;
+      font-family: sans-serif;
+      background-color: #0a0a0a;
       color: white;
     }
-
-    header {
+    .header {
       padding: 20px;
       display: flex;
       align-items: center;
-      gap: 10px;
+      gap: 15px;
+      background-color: #1a1a1a;
     }
-
-    header img {
+    .header img {
       width: 50px;
       height: 50px;
       border-radius: 50%;
     }
-
-    header .username {
-      font-weight: bold;
+    .header .username {
       font-size: 18px;
-      color: white;
-    }
-
-    .main {
-      padding: 20px;
-    }
-
-    .card {
-      background-color: #1a1a1a;
-      border-radius: 12px;
-      padding: 20px;
-      margin-bottom: 15px;
-    }
-
-    .card-title {
-      color: #00c853;
       font-weight: bold;
-      margin-bottom: 5px;
     }
-
-    .card-value {
-      font-size: 24px;
-      color: white;
+    .section {
+      padding: 20px;
     }
-
-    .card-sub {
-      font-size: 14px;
+    .balance-card {
+      background-color: #111;
+      border-radius: 12px;
+      padding: 15px;
+      margin-bottom: 20px;
+    }
+    .balance-card p {
+      margin: 5px 0;
       color: #999;
     }
-
-    .green-button {
-      background-color: #00c853;
+    .balance-card .value {
+      font-size: 20px;
+      color: #00ff00;
+    }
+    .invest-button {
+      background-color: #00ff00;
       color: black;
-      border: none;
-      padding: 12px;
-      border-radius: 8px;
-      font-size: 16px;
-      width: 100%;
-      font-weight: bold;
-    }
-
-    .tariff-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 10px;
-      margin-top: 10px;
-    }
-
-    .tariff-btn {
-      background-color: #1a1a1a;
-      border: 1px solid #00c853;
-      color: #00c853;
-      border-radius: 8px;
-      padding: 10px;
+      padding: 15px;
       text-align: center;
+      border-radius: 10px;
       font-weight: bold;
+      margin: 0 20px;
+      cursor: pointer;
     }
-
-    footer {
+    .tabs {
       position: fixed;
       bottom: 0;
-      left: 0;
       width: 100%;
-      background-color: #1a1a1a;
       display: flex;
       justify-content: space-around;
+      background-color: #111;
       padding: 10px 0;
-      border-top: 1px solid #333;
     }
-
-    footer button {
-      background: none;
-      border: none;
-      color: #999;
-      font-size: 14px;
+    .tab {
+      text-align: center;
+      color: #888;
+      font-size: 12px;
     }
-
-    footer button.active {
-      color: #00c853;
+    .tab.active {
+      color: #00ff00;
     }
-
-    .section {
-      display: none;
+    .tariff-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 10px;
+      padding: 20px;
     }
-
-    .section.active {
-      display: block;
+    .tariff-button {
+      border: 2px solid #00ff00;
+      color: #00ff00;
+      background-color: transparent;
+      padding: 15px;
+      border-radius: 12px;
+      font-weight: bold;
+      min-width: 100px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
-
-  <header>
-    <img id="userPhoto" src="https://via.placeholder.com/50" alt="Аватар">
-    <div class="username" id="userName">Имя Фамилия</div>
-  </header>
-
-  <div class="main">
-    <div id="home" class="section active">
-      <div class="card">
-        <div class="card-title">Ваш баланс</div>
-        <div class="card-value">0.00 TRX</div>
-        <div class="card-sub">≈ $0.00</div>
-      </div>
-
-      <div class="card">
-        <div class="card-title">Тарифы с 100% прибылью от 10 до 30 дней</div>
-        <div class="tariff-grid">
-          <div class="tariff-btn">200 TRX</div>
-          <div class="tariff-btn">300 TRX</div>
-          <div class="tariff-btn">400 TRX</div>
-          <div class="tariff-btn">800 TRX</div>
-          <div class="tariff-btn">900 TRX</div>
-          <div class="tariff-btn">1,000 TRX</div>
-          <div class="tariff-btn">1,500 TRX</div>
-          <div class="tariff-btn">500 TRX</div>
-          <div class="tariff-btn">600 TRX</div>
-        </div>
-        <button class="green-button" onclick="showSection('invest')">Инвестировать</button>
-      </div>
+  <!-- Главная страница -->
+  <div id="main">
+    <div class="header">
+      <img id="avatar" src="https://via.placeholder.com/50" alt="avatar" />
+      <div class="username" id="username">Имя Фамилия</div>
     </div>
-
-    <div id="wallet" class="section">
-      <div class="card">
-        <p>Здесь будет информация о кошельке</p>
+    <div class="section">
+      <div class="balance-card">
+        <p>Ваш баланс</p>
+        <div class="value">0.00 TRX</div>
+        <p>≈$0.00</p>
       </div>
-    </div>
-
-    <div id="history" class="section">
-      <div class="card">
-        <p>Здесь будет история транзакций</p>
-      </div>
-    </div>
-
-    <div id="invest" class="section">
-      <div class="card">
-        <p>Инвестиции активны. Выберите тариф и подтвердите.</p>
-        <button class="green-button">Подтвердить инвестицию</button>
-      </div>
+      <div class="invest-button" onclick="showInvest()">Инвестировать</div>
     </div>
   </div>
 
-  <footer>
-    <button onclick="showSection('home', this)" class="active">Главная</button>
-    <button onclick="showSection('wallet', this)">Кошелек</button>
-    <button onclick="showSection('history', this)">История</button>
-  </footer>
+  <!-- Страница инвестирования -->
+  <div id="invest" style="display:none;">
+    <div class="section">
+      <h3 style="color:#00ff00;">Тарифы с 30% прибылью от 10 до 30 дней</h3>
+      <div class="tariff-container">
+        <div class="tariff-button">200 TRX</div>
+        <div class="tariff-button">300 TRX</div>
+        <div class="tariff-button">400 TRX</div>
+        <div class="tariff-button">500 TRX</div>
+        <div class="tariff-button">600 TRX</div>
+        <div class="tariff-button">800 TRX</div>
+        <div class="tariff-button">900 TRX</div>
+        <div class="tariff-button">1,000 TRX</div>
+        <div class="tariff-button">1,500 TRX</div>
+      </div>
+      <div class="invest-button">Инвестировать</div>
+    </div>
+  </div>
+
+  <div class="tabs">
+    <div class="tab active">Главная</div>
+    <div class="tab">Кошелек</div>
+    <div class="tab">История</div>
+  </div>
 
   <script>
-    function showSection(id, btn) {
-      document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
-      document.getElementById(id).classList.add('active');
-      
-      if (btn) {
-        document.querySelectorAll('footer button').forEach(b => b.classList.remove('active'));
-        btn.classList.add('active');
-      }
+    function showInvest() {
+      document.getElementById('main').style.display = 'none';
+      document.getElementById('invest').style.display = 'block';
     }
 
-    // Вставка данных пользователя Telegram
-    window.Telegram?.WebApp?.ready();
-    const tgUser = window.Telegram?.WebApp?.initDataUnsafe?.user;
-    if (tgUser) {
-      const name = `${tgUser.first_name || ''} ${tgUser.last_name || ''}`.trim();
-      document.getElementById("userName").textContent = name;
-      if (tgUser.photo_url) {
-        document.getElementById("userPhoto").src = tgUser.photo_url;
+    // Пример: подтянуть имя и аватарку Telegram
+    window.onload = function () {
+      if (window.Telegram && Telegram.WebApp && Telegram.WebApp.initDataUnsafe.user) {
+        const user = Telegram.WebApp.initDataUnsafe.user;
+        document.getElementById('username').textContent = user.first_name + ' ' + (user.last_name || '');
+        document.getElementById('avatar').src = user.photo_url;
       }
-    }
+    };
   </script>
 </body>
 </html>
